--- a/src/pages/OwnerSpeaking/OwnerSpeaking.css
+++ b/src/pages/OwnerSpeaking/OwnerSpeaking.css
@@ -14,6 +14,11 @@
     color: ivory;
 }
 
+#lyrics span {
+    transition: color 1s ease;
+    color: rgb(45, 46, 68);
+}
+
 .owner {
     font-family: "Roboto Serif", serif;
     font-optical-sizing: auto;
