--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-    height: 100dvh;
+    height: 100vh;
     background-color: ivory;
     padding-left: 20px;
     padding-right: 20px;
@@ -14,8 +14,8 @@
     position: absolute;
     background-image: linear-gradient(rgba(66, 66, 66, 0.5), rgba(255, 255, 255, 0.5)),
         url('../../../public/resources/coffee-banner.jpg');
-    height: 100dvh;
-    width: 100dvw;
+    height: 100vh;
+    width: 100dw;
     background-size: cover;
 }
 
