--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -15,7 +15,7 @@
     background-image: linear-gradient(rgba(66, 66, 66, 0.5), rgba(255, 255, 255, 0.5)),
         url('../../../public/resources/coffee-banner.jpg');
     height: 100vh;
-    width: 100dw;
+    width: 100vw;
     background-size: cover;
 }
 
