--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -83,8 +83,8 @@
     z-index: 1;
     padding-top: 30px;
     position: fixed;
-    height: 100dvh;
-    width: 100dvw;
+    height: 100vh;
+    width: 100vw;
     background-color: ivory;
 }
 
