--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,159 +1,165 @@
 .home {
-    height: 100vh;
-    background-color: ivory;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    gap: 300px;
+  height: 100vh;
+  background-color: ivory;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  gap: 300px;
 }
 
 .bg-image {
-    position: absolute;
-    background-image: linear-gradient(rgba(66, 66, 66, 0.5), rgba(255, 255, 255, 0.5)),
-        url('../../../public/resources/coffee-banner.jpg');
-    height: 100vh;
-    width: 100vw;
-    background-size: cover;
+  position: absolute;
+  background-image: linear-gradient(
+      rgba(66, 66, 66, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("../../../public/resources/coffee-banner.jpg");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
 }
 
 .nav-container {
-    z-index: 1;
-    max-width: 1800px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 0px 0px 0px;
+  z-index: 1;
+  max-width: 1800px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0px 0px 0px;
 }
 
 .nav-container h1 {
-    font-family: "Great Vibes", cursive;
-    font-weight: 500;
-    font-style: normal;
-    color: ivory;
+  font-family: "Great Vibes", cursive;
+  font-weight: 500;
+  font-style: normal;
+  color: ivory;
 }
 
 .buger {
-    background-color: transparent;
-    border: none;
-    color: rgb(227, 227, 227);
-    font-size: 1.5rem;
+  background-color: transparent;
+  border: none;
+  color: rgb(227, 227, 227);
+  font-size: 1.5rem;
 }
 
 .home-wrapper {
-    z-index: 1;
-    width: 100%;
-    max-width: 1700px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  z-index: 1;
+  width: 100%;
+  max-width: 1700px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .slogan-container {
-    font-family: "Roboto Serif", serif;
-    font-optical-sizing: auto;
-    font-size: 1.5rem;
+  font-family: "Roboto Serif", serif;
+  font-optical-sizing: auto;
+  font-size: 1.5rem;
 
-    color: ivory;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  color: ivory;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-
-
 .more {
-    padding: 10px 10px 10px 10px;
-    font-weight: bold;
-    color: ivory;
-    text-decoration: none;
-    padding: 5px 10px 5px 10px;
-    border: 1.8px ivory solid;
+  padding: 10px 10px 10px 10px;
+  font-weight: bold;
+  color: ivory;
+  text-decoration: none;
+  padding: 5px 10px 5px 10px;
+  border: 1.8px ivory solid;
 }
 
 .more:hover {
-    color: rgb(90, 90, 90);
-    background-color: ivory;
+  color: rgb(90, 90, 90);
+  background-color: ivory;
 }
 
 .burger-menu {
-    z-index: 1;
-    padding-top: 30px;
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    background-color: ivory;
+  z-index: 1;
+  padding-top: 30px;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: ivory;
 }
 
 .burger-items {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
 }
 
 .burger-item {
-    font-family: "Cutive Mono", monospace;
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none;
-    color: rgb(95, 95, 95);
+  font-family: "Cutive Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  color: rgb(95, 95, 95);
 }
 
 .close-icon i {
-    position: absolute;
-    right: 20px;
-    color: rgb(140, 140, 140);
-    font-size: 1.5rem;
+  position: absolute;
+  right: 20px;
+  color: rgb(140, 140, 140);
+  font-size: 1.5rem;
 }
 
+@media (min-width: 810px) {
+  .nav-container h1 {
+    font-size: 4rem;
+  }
 
-@media (min-width:810px) {
-    .nav-container h1 {
-        font-size: 4rem;
-    }
+  .bg-image {
+    z-index: -1;
+    position: fixed;
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.5),
+        rgba(255, 255, 255, 0.5)
+      ),
+      url("../../../public/resources/causal-4.jpeg");
+  }
 
-    .bg-image {
-        z-index: -1;
-        position: fixed;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.5)),
-            url('../../../public/resources/causal-4.jpeg');
-    }
+  .more {
+    border: 2.3px ivory solid;
+    font-size: 2.5rem;
+    font-weight: 600;
+  }
 
-    .more {
-        border: 2.3px ivory solid;
-        font-size: 2.5rem;
-        font-weight: 600;
-    }
+  .slogan-container {
+    font-size: 2.5rem;
+    padding-bottom: 20px;
+  }
 
-    .slogan-container {
-        font-size: 2.5rem;
-        padding-bottom: 20px;
-    }
+  .home {
+    gap: 300px;
+    background-color: transparent;
+  }
 
-    .home {
-        gap: 300px;
-        background-color: transparent;
-    }
+  .teleports {
+    font-family: "Roboto Serif", serif;
+    display: flex;
+    align-items: center;
+    font-optical-sizing: auto;
+  }
 
-    .teleports {
-        display: flex;
-        align-items: center;
-        font-family: "Roboto Serif", serif;
-        font-optical-sizing: auto;
-    }
+  .route {
+    padding: 5px 30px 5px 30px;
+    color: ivory;
+    text-decoration: none;
+  }
 
-    .route {
-        padding: 5px 30px 5px 30px;
-        color: ivory;
-        text-decoration: none;
-    }
-
-    .route:hover {
-        background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2));
-    }
+  .route:hover {
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.2),
+      rgba(255, 255, 255, 0.2)
+    );
+  }
 }
